Completed Using jupyter (need) exercises 2 and 3!

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -88,9 +88,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b44f447-9ed8-4a5d-8b89-3c7047e18476",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 (In Your Own Words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c548df5-bd2d-4014-a19a-77041649ed3e",
+   "metadata": {},
+   "source": [
+    "### What is a Git repository?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9378c96a-e33f-43e9-83e4-ea8b4ef9159e",
+   "metadata": {},
+   "source": [
+    "A Git repository is what stores all selected files in code and it keeps track of the changes we make in files."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec954db8-54ce-4c89-84b8-c749dc9043a0",
+   "metadata": {},
+   "source": [
+    "### Git keeps track of ___BLANK___ in the files in our repository."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9493bfc6-a3e7-49ea-8674-222b9c25c80d",
+   "metadata": {},
+   "source": [
+    "Git keeps track of the changes made in the files in our repository."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae371ce7-13fe-4225-becd-8234e05a1cc6",
+   "metadata": {},
+   "source": [
+    "### What is a **commit**?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2b6c10b-f328-4e51-bab5-11f2202b85e4",
+   "metadata": {},
+   "source": [
+    "A commit is a tool we use to track the changes in our repository. By committing changes, we are noting down these changes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3331e82-a95e-4112-b4fd-83d020893832",
+   "metadata": {},
+   "source": [
+    "### What is a **push**?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93f61300-bcfc-4a6f-9b3a-f7c0af9dfdc8",
+   "metadata": {},
+   "source": [
+    "A push means to transfer the changes in the files our repository to the main cloud or server."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eacba22-8639-412c-b2b4-016a3dab41eb",
+   "metadata": {},
+   "source": [
+    "### What is a pull?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88b35b25-bd55-4f72-83b8-99970cff558f",
+   "metadata": {},
+   "source": [
+    "A pull, conversely, is to transfer the changes from the sever to our local repository."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b27c8b91-6c86-4576-ad0f-5ad045b9105f",
+   "metadata": {},
+   "source": [
+    "### What is the difference between **Github** and **GitHub Desktop**?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f00c468f-7677-40d6-90fb-65f96d40133a",
+   "metadata": {},
+   "source": [
+    "GitHub is the browser version while GitHub Desktop is installed onto a computer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48abbd81-5695-4af4-9eeb-337f7aa0e5c4",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 (A Matter of Statistics) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dc36c43-e911-4581-8806-b88465920b9f",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mu = \\dfrac{1}{n}\\sum\\limits_{i=1}^nx{\\scriptscriptstyle i}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6ab9113-f2d8-432d-bfcd-48e7c9ab121f",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\sigma = \\sqrt{\\dfrac{1}{n}\\sum\\limits_{i=1}^n(x{\\scriptscriptstyle i}-\\mu)^{2}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca973199-7264-4167-a329-dba3e453dbf6",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "r = \\dfrac{\\sum\\limits_{i=1}^{n}(x{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle X})(y{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle Y})}{\\sqrt{\\sum\\limits_{i=1}^{n}(x{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle X})^{2}\\sum\\limits_{i=1}^{n}(y{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle Y})^{2}}}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f05acc8-a854-443a-9df9-49c35ad5360c",
+   "id": "c83ee8bd-556d-4f75-a93f-c093009bf105",
    "metadata": {},
    "outputs": [],
    "source": []
