ready for review! (using jupyter need exercises)

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "r = \\dfrac{\\sum\\limits_{i=1}^{n}(x{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle X})(y{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle Y})}{\\sqrt{\\sum\\limits_{i=1}^{n}(x{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle X})^{2}\\sum\\limits_{i=1}^{n}(y{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle Y})^{2}}}\n",
+    "r = \\dfrac{\\sum_{i=1}^{n}(x_{i}-\\mu_{X})(y_{i}-\\mu_{Y})}{\\sqrt{\\sum_{i=1}^{n}(x{\\scriptscriptstyle i}-\\mu{\\scriptscriptstyle X})^{2}\\sum_{i=1}^{n}(y_{i}-\\mu{\\scriptscriptstyle Y})^{2}}}\n",
     "$$"
    ]
   },
