READY FOR REVIEW AGAIN! (fundamentals need exercises)

--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -18,6 +18,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57bb5d0d-ac1c-494e-9073-3202f9507cd4",
+   "metadata": {},
+   "source": [
+    "Different python features \n",
+    "- print function\n",
+    "- comment function\n",
+    "- true / false using \"==\"\n",
+    "- if else statements\n",
+    "- printing variables\n",
+    "- mathematical functions like * for multiplication using integers\n",
+    "- 1D lists\n",
+    "- 2D lists\n",
+    "- dictionary using {}\n",
+    "- importing packages like math which adds mathematical functions like squareroot\n",
+    "- importing packages like numpy with an alias\n",
+    "- indicating ownership with a . (for example: use before a split function) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cd2f4ae2-80c8-4716-9f3f-ff90ba811484",
@@ -32,7 +52,7 @@
     }
    ],
    "source": [
-    "print('Hello World!')"
+    "print('Hello World!') # print function"
    ]
   },
   {
@@ -86,7 +106,7 @@
     }
    ],
    "source": [
-    "student_height = 166\n",
+    "student_height = 166   \n",
     "print(student_height)"
    ]
   },
@@ -386,7 +406,7 @@
     }
    ],
    "source": [
-    "5//2          # divides to give an integer rounded off "
+    "5//2          # divides to give an integer rounded down or equal to the result"
    ]
   },
   {
