READY FOR REVIEW AGAIN! (fundamentals good exercise)

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -96,31 +96,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "5eb45d99-16a6-4316-9ec7-e7a21d7f9d18",
+   "execution_count": 12,
+   "id": "83e465f7-1844-4862-9433-155a2d464b7d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What is your name? Ning\n",
-      "How old are you? 19\n"
+      "What is your name? ning\n",
+      "How old are you? 18\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My name is NING and I am 19 years old.\n"
+      "My name is \u001b[1mNING\u001b[0m and I am \u001b[1m18\u001b[0m years old.\n"
      ]
     }
    ],
    "source": [
     "name = input('What is your name?')\n",
-    "age = (input('How old are you?'))\n",
+    "age = input('How old are you?')\n",
     "\n",
-    "print('My name is '+name.upper()+' and I am '+age+' years old.')"
+    "print('My name is ' + f\"\\033[1m{name.upper()}\\033[0m\" + ' and I am ' f\"\\033[1m{age}\\033[0m\" + ' years old.')"
    ]
   },
   {
@@ -206,6 +206,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "20f6c928-4787-4d09-8894-2cd5d5d457d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple      $ 0.99\n",
+      "Banana     $ 0.59\n",
+      "Orange     $ 1.29\n",
+      "********** $*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruit1 = 'Apple'\n",
+    "priceA = 0.99\n",
+    "\n",
+    "fruit2 = 'Banana'\n",
+    "priceB = 0.59\n",
+    "\n",
+    "fruit3 = 'Orange'\n",
+    "priceO = 1.29\n",
+    "\n",
+    "print(f'{fruit1:<10} ${priceA:>5}\\n{fruit2:<10} ${priceB:>5}\\n{fruit3:<10} ${priceO:>5}\\n{\"********** $*****\"}')      "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8d72dfdd-2be2-41c8-9901-1eb9990e1f16",
    "metadata": {},
@@ -228,45 +258,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "bf4e5706-476e-46a8-bb00-17b5be996f5b",
+   "execution_count": 46,
+   "id": "78219986-a849-4f4c-9961-1888617d3f60",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the student's score:  88\n"
+      "Enter the student's score:  %%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The student's letter grade is: A\n"
+      "You have entered an invalid score! Please try again.\n"
      ]
     }
    ],
    "source": [
     "score = input('Enter the student\\'s score: ')\n",
     "\n",
+    "if score.isnumeric():\n",
+    "    if 70 <= int(score) <= 100:\n",
+    "        print('The student\\'s letter grade is: A')\n",
     "\n",
-    "if 70 <= int(score) <= 100:\n",
-    "    print('The student\\'s letter grade is: A')\n",
+    "    elif 50 <= int(score) <= 69:\n",
+    "        print('The student\\'s letter grade is: B')\n",
     "\n",
-    "if 50 <= int(score) <= 69:\n",
-    "    print('The student\\'s letter grade is: B')\n",
+    "    elif 35 <= int(score) <= 49:\n",
+    "        print('The student\\'s letter grade is: C')\n",
     "\n",
-    "if 35 <= int(score) <= 49:\n",
-    "    print('The student\\'s letter grade is: C')\n",
+    "    elif 0 <= int(score) <= 34:\n",
+    "        print('The student\\'s letter grade is: Fail')\n",
     "\n",
-    "if 0 <= int(score) <= 34:\n",
-    "    print('The student\\'s letter grade is: Fail')\n",
+    "    elif int(score) < 0:\n",
+    "        print('You have entered an invalid score! Please try again.')\n",
+    "    \n",
+    "    elif int(score) > 100:\n",
+    "        print('You have entered an invalid score! Please try again.')\n",
     "\n",
-    "if int(score) < 0:\n",
-    "    print('You have entered an invalid score! Please try again.')\n",
-    "\n",
-    "if int(score) > 100:\n",
+    "else:\n",
     "    print('You have entered an invalid score! Please try again.')"
    ]
   },
